<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaterialApp</string>
    <string name="hello_world">Hello world!sdfsdfsfffffffffffffffffffffffffffff\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff\n\n\n\n=n\n\n\nffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base_navigation">BaseNavigationActivity</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="title_activity_base_activity2">BaseActivity2</string>
    <string name="title_activity_new_activity2">NewActivity2</string>

</resources>
